
On a NeXT, it has been reported that lex replaces the '\0' with NULL,
and then the compiler complains about it.  I think this is an old bug
that is no longer applicable.

July 30, 1993
The flex scanner generator does not work because it does not handle
input buffering the same way as lex.  I don't know of any reasonable
way to rewrite detex to get around this problem.

May 25, 1995
According to alain@ia1.u-strasbg.fr (Alain Ketterlin), using flex
allows 8-bit characters to be handled correctly.

Modified (Version 2.8) -- January 1, 2008
Added NCSA/University of Illinois Open Source License to facilitate
free redistribution.

(Version 2.8.1) -- October 2, 2008
First version of OpenDetex.
Making program compile on modern UNIX systems; many fixes in LaTeX
code handling (quotes, figure and table environments, headings and
many more).

(Version 2.8.2) -- February, 2016
Improved ANSI C compatibility. Used kpse_find_file() and
kpse_program_name(). Handle `\kern', allow `em/ex'for dimensions,
handle glue specs. Added the never-interactive option to prevent flex
from creating a problematic prototype for isatty(). Renamed
ERROR -> my_ERROR to avoid a conflict with WIN32 headers. Used binary
mode for output file (Peter Breitenlohner and Werner Lemberg)

Insert a space in place of right curly brace (Eric Miotto).

Provide 'make uninstall'. Install man page when running 'make install'.

(Version 2.8.3) -- UNRELEASED
Removed states.sed that modified detex.l to avoid Lex memory overrun - no longer needed on current machines. Added detex.c to the distributed package to allow compiling OpenDetex without having Flex.

Removed 'mathmatica' from the default list of environments which contents are ignored - 'mathmatica' is not supported by TeX. Added more ignored environments: algorithm, align, smallmatrix and several more.

Removed special files for OS/2 - they required compilers that no longer exist. OpenDetex should be able to be compiled using GCC for OS/2.